Fix toggle/move indicator alignment for settings

--- a/src/resources/src/scss/cp-nav-settings.scss
+++ b/src/resources/src/scss/cp-nav-settings.scss
@@ -26,7 +26,6 @@
     .move {
         display: block;
         position: absolute;
-        top: calc(50% - 11px);
         font-size: 11px;
         text-decoration: none;
         z-index: 1;
@@ -35,7 +34,7 @@
     .toggle {
         display: block;
         position: absolute;
-        top: calc(50% - 7px);
+        top: calc(50% - 8px);
         padding: 4px;
     }
 
